# extended-xyz

./: .gitignore  CMakeLists.txt  README.md  extended-xyz.bnf  pyproject.toml  setup.cfg  setup.py
exyz/: __init__.py  exyz_build.py  info.py  parser.py  properties.py
exyz-lark/: comment-line.txt  extended-xyz-comment.lark  extended-xyz.lark  read-comment.py  read-file.py  sample.exyz
src/: exyz.h  parser.c  types.c  writer.c
tests/: CMakeLists.txt  atom-properties.cpp  frame-properties.cpp
